--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
-<body>
-    Nothing fancy just a repo full of things I find helpful!
-</body>
+<!DOCTYPE html>
+<html>
+    <head>
+        Wizage's tool repo
+    </head>
+    <body>
+        Nothing fancy just a repo full of things I find helpful!
+        <br />
+        <div>
+            Add to <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://wizage.github.io/repo/">cydia</a>
+        </div>
+        <div>
+            Add to <a href="zbra://sources/add/https://cwizage.github.io/repo/">zebra</a>
+        </div>
+        <div>
+            Add to <a href="sileo://source/add/https://cwizage.github.io/repo/">sileo</a>
+        </div>
+    </body>
+</html>
