--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
             Add to <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://wizage.github.io/repo/">cydia</a>
         </div>
         <div>
-            Add to <a href="zbra://sources/add/https://cwizage.github.io/repo/">zebra</a>
+            Add to <a href="zbra://sources/add/https://wizage.github.io/repo/">zebra</a>
         </div>
         <div>
-            Add to <a href="sileo://source/add/https://cwizage.github.io/repo/">sileo</a>
+            Add to <a href="sileo://source/add/https://wizage.github.io/repo/">sileo</a>
         </div>
     </body>
 </html>
